# wolfram-alpha-plugin

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
