[package]
name = "wolfram-alpha-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "wolfram_alpha_plugin"
crate-type = ["cdylib", 'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
reqwest = { version = "0.12.4", features = ["blocking"] }
abi_stable = "0.11.3"
urlencoding = "2.1.3"
clipboard = "0.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
